--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -24,8 +24,9 @@ The next functionnalities I hope to add :
 </ol>
 <h2>New in this version</h2>
 <ul>
-  Add the &quot;Administration&quot; tab which allows you to manage accounts and 
-  categories. 
+  <li>Add the &quot;Administration&quot; tab which allows you to manage accounts 
+    and categories.</li>
+  <li>The bank account creation dialog allows you to create payment method. </li>
 </ul>
 <hr>
 <h1>Older releases</h1>
