--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -26,7 +26,9 @@ The next functionnalities I hope to add :
 <ul>
   <li>Add the &quot;Administration&quot; tab which allows you to manage accounts 
     and categories.</li>
-  <li>The bank account creation dialog allows you to create payment method. </li>
+  <li>The bank account creation dialog allows you to create payment method.</li>
+  <li>Bug <a href="https://sourceforge.net/tracker/index.php?func=detail&aid=2856006&group_id=276272&atid=1173518">2856006</a> 
+    fixed.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
