--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -29,6 +29,7 @@ Quelques fonctionnalités que j'espère ajouter prochainement :
     ou d'&eacute;diter les comptes et les cat&eacute;gories.</li>
   <li>Le dialogue de cr&eacute;ation de comptes permet &agrave; pr&eacute;sent 
     &eacute;galement de cr&eacute;er des modes de paiement.</li>
+  <li>Correction du bug <a href="https://sourceforge.net/tracker/?func=detail&aid=2852451&group_id=276272&atid=1173518">2856006</a>.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
