--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Release notes</title></head>
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Release notes</title>
+
 <style type="text/css">
 <!--
 .bugFix {
-	color: #009900;
+color: #009900;
 }
 -->
 </style>
+</head>
+
 <body>
 <h1>Version &nbsp;0.2.0 (work in progress)</h1>
-<p>This version is a preview with somme missing functionnalities and, probably, 
-  a lot of bugs.<br>
+<p>This version is a preview with somme missing functionnalities
+and, probably, a lot of bugs.<br>
 You will also find a lot of GUI items without any
 tooltip.<br>
 <br>
@@ -22,32 +25,42 @@ still a preview ;-) <br>
 </p>
 The next functionnalities I hope to add :
 <ol>
-  <li>The ability to manage periodic transactions.</li>
-  <li>Some statistics or charts about categories.</li>
-  <li>Maybe - The ability to compress and encrypt data files.</li>
-  <li>Maybe - An auto-complete wizard in the "new transaction" dialog that would 
-    be able to complete the description as you type and to deduce other informations 
-    (especially categories).</li>
+<li>The ability to manage periodic transactions.</li>
+<li>Some statistics or charts about categories.</li>
+<li>Maybe - The ability to compress and encrypt data files.</li>
+<li>Maybe - An auto-complete wizard in the "new transaction"
+dialog that would be able to complete the description as you type and
+to deduce other informations (especially categories).</li>
 </ol>
 <h2>New in this version</h2>
 <ul>
-  <li>Add the &quot;Administration&quot; tab which allows you to manage accounts 
-    and categories.</li>
-  <li>The bank account creation dialog allows you to create payment method.</li>
-  <li><span class="bugFix">Bug 2856006 fixed</span> : <a href="func=detail&aid=2856006&group_id=276272&atid=1173518">&quot;Last 
-    chance to save is broken in v0.1.12&quot;</a>.</li>
+<li>Add the "Administration" tab which allows you to manage
+accounts and categories.</li>
+<li>The bank account creation dialog allows you to create
+payment method.</li>
+<li><span class="bugFix">Bug 2856006 fixed</span>
+: <a href="func=detail&amp;aid=2856006&amp;group_id=276272&amp;atid=1173518">"Last
+chance to save is broken in v0.1.12"</a>.</li>
+<li><span class="bugFix">Bug 2856394 fixed </span>
+: <a href="https://sourceforge.net/tracker/?func=detail&amp;aid=2856394&amp;group_id=276272&amp;atid=1173518">
+"Balances disappears during interface reloading after a preference
+change"</a>.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
 <h2>Version &nbsp;0.1.12 (07/09/2009)</h2>
 <ul>
-  <li>Add a Preference item in the File menu. The localization and the application's 
-    look &amp; feel can be choosed</li>
+<li>Add a Preference item in the File menu. The localization
+and the application's look &amp; feel can be choosed</li>
 </ul>
 <h2>Version &nbsp;0.1.11 (05/09/2009)</h2>
-<ul><li>The english translation is complete</li><li><span class="bugFix">Bug
+<ul>
+<li>The english translation is complete</li>
+<li><span class="bugFix">Bug
 2852451 fixed</span> : <a href="https://sourceforge.net/tracker/?func=detail&amp;aid=2852451&amp;group_id=276272&amp;atid=1173518">"No
-difference between new and modify dialogs title"</a></li></ul><h2>Version &nbsp;0.1.10 (04/09/2009)</h2>
+difference between new and modify dialogs title"</a></li>
+</ul>
+<h2>Version &nbsp;0.1.10 (04/09/2009)</h2>
 <ul>
 <li>Improved About dialog.</li>
 </ul>
