--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-<title>Notes de mise à jour</title>
+<html><head>
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Notes de mise à jour</title>
+
 <style type="text/css">
 <!--
 .bugFix {
-	color: #009900;
+color: #009900;
 }
 -->
 </style>
 </head>
+
 <body>
 <h1>Version &nbsp;0.2.0 (travail en cours ...)</h1>
-<p>Cette version&nbsp;est&nbsp;une pre-version à laquelle manquent quelques fonctionnalités, 
-  et qui, probablement,&nbsp;comporte beaucoup de bugs. Vous trouverez également 
-  des objets dans l'interface sans bulle d'aide.</p>
+<p>Cette version&nbsp;est&nbsp;une pre-version à laquelle
+manquent quelques fonctionnalités, et qui,
+probablement,&nbsp;comporte beaucoup de bugs. Vous trouverez
+également des objets dans l'interface sans bulle d'aide.</p>
 <p>Néanmoins, elle est déjà utilisable pour gérer des comptes
 bancaires
 (d'ailleurs je l'utilise pour les miens).<br>
@@ -24,36 +25,45 @@ d'être indulgent, ce n'est que pré-version ;-) <br>
 </p>
 Quelques fonctionnalités que j'espère ajouter prochainement :
 <ol>
-  <li>La possibilité de gérer des opérations périodiques (paye, abonnement, ...).</li>
-  <li>Des statistiques et des graphiques sur les catégories (sans quoi, leur saisie 
-    n'aurait aucun intérêt).</li>
-  <li>Peut-être la possibilité de compresser le fichier de données et de le protéger 
-    par mot de passe.</li>
-  <li>Peut-être un auto-complétion dans le dialogue de création d'une opération. 
-    Celui-ci serait chargé de completer les descriptions possibles au fur et à 
-    mesure de la saisie et en déduire les informations (typiquement la catégorie).</li>
+<li>La possibilité de gérer des opérations périodiques (paye,
+abonnement, ...).</li>
+<li>Des statistiques et des graphiques sur les catégories (sans
+quoi, leur saisie n'aurait aucun intérêt).</li>
+<li>Peut-être la possibilité de compresser le fichier de
+données et de le protéger par mot de passe.</li>
+<li>Peut-être un auto-complétion dans le dialogue de création
+d'une opération. Celui-ci serait chargé de completer les descriptions
+possibles au fur et à mesure de la saisie et en déduire les
+informations (typiquement la catégorie).</li>
 </ol>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Ajout d'un onglet &quot;Administration&quot; permettant d'ajouter, de supprimer 
-    ou d'&eacute;diter les comptes et les cat&eacute;gories.</li>
-  <li>Le dialogue de cr&eacute;ation de comptes permet &agrave; pr&eacute;sent 
-    &eacute;galement de cr&eacute;er des modes de paiement.</li>
-  <li><span class="bugFix">Correction du bug 2856006</span> <a href="https://sourceforge.net/tracker/?func=detail&aid=2852451&group_id=276272&atid=1173518"> 
-    &quot;Le bouton annuler du dialogue 'Des modifications n'ont pas &eacute;t&eacute; 
-    sauvegard&eacute;es' ne fonctionne pas&quot;</a>.</li>
+<li>Ajout d'un onglet "Administration" permettant d'ajouter, de
+supprimer ou d'éditer les comptes et les catégories.</li>
+<li>Le dialogue de création de comptes permet à présent
+également de créer des modes de paiement.</li>
+<li><span class="bugFix">Correction du bug 2856006</span>
+<a href="https://sourceforge.net/tracker/?func=detail&amp;aid=2852451&amp;group_id=276272&amp;atid=1173518">
+"Le bouton annuler du dialogue 'Des modifications n'ont pas été
+sauvegardées' ne fonctionne pas"</a>.</li>
+<li><span class="bugFix">Correction du bug 2856394</span><a href="https://sourceforge.net/tracker/?func=detail&amp;aid=2856394&amp;group_id=276272&amp;atid=1173518">"Les&nbsp;soldes
+disparaissent lors de rechargement de l'interface après un changement
+de préférence"</a>.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
 <h2>Version &nbsp;0.1.12 (07/09/2009)</h2>
 <ul>
-  <li>Ajout d'un item "Préférences" dans le menu "Fichiers", possibilté de choisir 
-    la langue et le look and feel de l'application.</li>
+<li>Ajout d'un item "Préférences" dans le menu "Fichiers",
+possibilté de choisir la langue et le look and feel de l'application.</li>
 </ul>
 <h2>Version &nbsp;0.1.11 (05/09/2009)</h2>
-<ul><li>Traduction anglaise complète.</li>
-  <li><span class="bugFix">Correction du bug 2852451</span> <a href="https://sourceforge.net/tracker/?func=detail&amp;aid=2852451&amp;group_id=276272&amp;atid=1173518">"Pas 
-    de différence entre les titres des dialogues de création et de modification"</a>.</li>
+<ul>
+<li>Traduction anglaise complète.</li>
+<li><span class="bugFix">Correction du bug 2852451</span>
+<a href="https://sourceforge.net/tracker/?func=detail&amp;aid=2852451&amp;group_id=276272&amp;atid=1173518">"Pas
+de différence entre les titres des dialogues de création et de
+modification"</a>.</li>
 </ul>
 <h2>Version &nbsp;0.1.10 (04/09/2009) </h2>
 <ul>
