--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -48,7 +48,7 @@ sauvegardées' ne fonctionne pas"</a>.</li>
 disparaissent lors de rechargement de l'interface après un changement
 de préférence"</a>.</li><li>Amélioration
 du tri de la liste des opérations (dans les pécédentes versions, une
-opération dupliquée pouvait apparaitre très loin de son original).</li>
+opération dupliquée pouvait apparaitre très loin de son original).</li><li><span class="bugFix">Bug fixed</span> : Quand la première colonne de la table des opérations (la zone qui permet de déployer/replier la vue des sous-opérations) était déplacée, ce contrôle restait effectué par la première colonne de la table.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
