--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -10,8 +10,12 @@ color: #009900;
 .beAware {
 color: #AA0000;
 }
+.develop {
+color: #ff9900;
+}
 -->
-</style></head>
+</style>
+</head>
 <body>
 <h1>Version &nbsp;0.1.17 (18/09/2009)</h1>
 <p>Cette version&nbsp;est&nbsp;une pre-version à laquelle
@@ -45,34 +49,44 @@ informations (typiquement la catégorie).</li>
 </ol>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix">Correction de bug </span> : L'authentification sur 
-    le serveur mandataire (proxy) ne fonctionnait pas.</li><li><span class="bugFix">Correction de bug </span> : Quand un compte était créé, le menu "filtre" devenait parfois incohérent.</li><li>Dans le menu contextuel de la table des transactions, ajout d'un item pour pointer l'opération sélectionnée.</li>
+<li><span class="bugFix">Correction de bug </span>
+: L'authentification sur le serveur mandataire (proxy) ne fonctionnait
+pas.</li>
+<li><span class="bugFix">Correction de bug </span>
+: Quand un compte était créé, le menu "filtre" devenait parfois
+incohérent.</li>
+<li>Dans le menu contextuel de la table des transactions, ajout
+d'un item pour pointer l'opération sélectionnée.</li><li><span class="develop">Developpers</span>
+: Passage à une architecture de plugins pour tous les panneaux de la fenêtre principale.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
 <h2>Version &nbsp;0.1.16 (17/09/2009)</h2>
 <ul>
-  <li>Ajout du support des connexions Internet via un proxy.</li>
-  <li>Ajout d'un menu contextuel sur la liste des transactions.</li>
-  <li><span class="bugFix">Correction de bug </span> : Un double clic sur le bouton 
-    droit de la souris (ou le central) éditait l'opération sélectionnée (et pas 
-    forcément celle ou avait lieu le clic). A présent, les double clics droit 
-    sont ignorés.</li>
+<li>Ajout du support des connexions Internet via un proxy.</li>
+<li>Ajout d'un menu contextuel sur la liste des transactions.</li>
+<li><span class="bugFix">Correction de bug </span>
+: Un double clic sur le bouton droit de la souris (ou le central)
+éditait l'opération sélectionnée (et pas forcément celle ou avait lieu
+le clic). A présent, les double clics droit sont ignorés.</li>
 </ul>
 <h2>Version &nbsp;0.1.15 (14/09/2009)</h2>
 <ul>
-  <li><span class="bugFix">Correction du bug 2858596</span> <a href="https://sourceforge.net/tracker/?func=detail&amp;aid=2858596&amp;group_id=276272&amp;atid=1173518"> 
-    "Après certains changements dans les préférences, les mises à jour des opérations 
-    ne sont plus répercutées dans la fenêtre des opérations"</a>.</li>
-  <li>Ajout d'un hack pour supporter les connexions via un proxy (nécessite d'éditer 
-    le fichier des préférences à la main).</li>
+<li><span class="bugFix">Correction du bug 2858596</span>
+<a href="https://sourceforge.net/tracker/?func=detail&amp;aid=2858596&amp;group_id=276272&amp;atid=1173518">
+"Après certains changements dans les préférences, les mises à jour des
+opérations ne sont plus répercutées dans la fenêtre des opérations"</a>.</li>
+<li>Ajout d'un hack pour supporter les connexions via un proxy
+(nécessite d'éditer le fichier des préférences à la main).</li>
 </ul>
 <h2>Version &nbsp;0.1.14 (13/09/2009)</h2>
 <ul>
-  <li><span class="bugFix">Correction de bug </span> : Lorsque la localisation 
-    était modifiée dans les préférences, les dates dans la table des opérations 
-    continuaient à être affichées sous le format de la localisation d'origine.</li>
-  <li>Ajout d'un nouvel item de menu permettant de vérifier les mises à jour.</li>
+<li><span class="bugFix">Correction de bug </span>
+: Lorsque la localisation était modifiée dans les préférences, les
+dates dans la table des opérations continuaient à être affichées sous
+le format de la localisation d'origine.</li>
+<li>Ajout d'un nouvel item de menu permettant de vérifier les
+mises à jour.</li>
 </ul>
 <h2>Version &nbsp;0.1.13 (11/09/2009)</h2>
 <ul>
